--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,7 @@ h3{
 .action{
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(/images/banner2R.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(../images/banner2R.jpg);
     background-position: center;
     background-size: cover;
     border-radius: 10px;
